# cofone

./: .gitignore  FEATURE.md  INSTALL.md  README.md  STRUCTURE.md  mio.md  pyproject.toml  requirements.txt
cofone/: __init__.py  chunker.py  llm.py  loader.py  rag.py  retriever.py
test/: .gitignore  cofone_demo.ipynb  note_ex.txt  test.ipynb  test.py
test/docs_ex/: machine_exa.md  test.txt
