[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cofone"
version = "0.1.0"
description = "Simple, fast RAG library for Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Leonardo Cofone", email = "leonardocofone@gmail.com"}]
keywords = ["rag", "llm", "ai", "retrieval", "nlp", "embeddings",
            "openai", "anthropic", "gemini", "ollama", "faiss", "bm25"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.0.0",           # LLM + embedding API calls (OpenAI-compatible)
    "python-dotenv>=1.0.0",    # .env file loading
    "httpx>=0.27.0",           # HTTP client for web URLs and Jina embeddings
    "beautifulsoup4>=4.12.0",  # HTML parsing for web URLs
    "pydantic>=2.0.0",         # structured output validation
]

[project.optional-dependencies]
pdf   = ["pypdf>=4.0.0"]
faiss = ["faiss-cpu>=1.7.0", "sentence-transformers>=2.0.0"]
web   = ["wikipedia>=1.4.0", "youtube-transcript-api>=0.6.0"]
all   = [
    "pypdf>=4.0.0",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.0.0",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=0.6.0",
]

[project.urls]
Homepage   = "https://github.com/LeonardoCofone/cofone"
Repository = "https://github.com/LeonardoCofone/cofone"
PyPI       = "https://pypi.org/project/cofone"
"Bug Tracker" = "https://github.com/LeonardoCofone/cofone/issues"